Use --add-opens instead of --add-exports-private